Bug 465242 - Clean up ProgressDlgController.mm. Patch by Ilya Sherman <ishermandom+bugs@gmail.com>, r=kreeger, r=jeff, sr=pink